--- a/hala.html
+++ b/hala.html
@@ -46,3 +46,24 @@
 <div id="butt">
 <button class="b1">Click here</button>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="align">
+    <div class="pageno">
+        <a href="#">&laquo;</a>
+        <a href="#" class="current">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">&raquo;</a>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<h3>Thanks for checking out this page!!</h3>
